FP-385: Remove Redundant Code. Avoid ID Truncation

--- a/client/src/components/DataFiles/DataFilesProjectsList/DataFilesProjectsList.scss
+++ b/client/src/components/DataFiles/DataFilesProjectsList/DataFilesProjectsList.scss
@@ -1,12 +1,4 @@
 .projects-listing {
-  flex-grow: 1;
-  th {
-    color: #484848;
-  }
-  th,
-  td {
-    font-size: 12px;
-  }
   /* title */
   th:nth-child(1),
   td:nth-child(1) {
@@ -15,11 +7,11 @@
   /* owner */
   th:nth-child(2),
   td:nth-child(2) {
-    width: 25%;
+    width: 35%;
   }
   /* id */
   th:nth-child(3),
   td:nth-child(3) {
-    width: 5%;
+    width: 15%;
   }
 }
